--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -5,6 +5,6 @@ Help:
   Version: "&c/mapsaver version&6 - Affiche la version du plugin"
   Save: "&c/mapsaver save <map_name>&6 - Sauvegarde la map en main"
   Import: "&c/mapsaver import <map_name>&6 - Import la map en paramètre"
-#  List: "&c/mapsaver list detail <shop>&6 - Permet de lister tous les globalshop à distance"
+  List: "&c/mapsaver list &6 - Permet de lister tous les maps"
 ErrorMessages:
   PermissionNotAllowed: "&cVous n'êtes pas autorisé à faire cette action"
