Add update command and fix worms on both commands

--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -3,14 +3,23 @@ Help:
   Help: "&c/mapsaver [help]&6 - Affiche l'aide"
   Reload: "&c/mapsaver reload&6 - Permet de recharger le plugin"
   Version: "&c/mapsaver version&6 - Affiche la version du plugin"
-  Save: "&c/mapsaver save <map_name>&6 - Sauvegarde la map en main"
-  Import: "&c/mapsaver import <map_name>&6 - Import la map en paramètre"
-  List: "&c/mapsaver list &6 - Permet de lister tous les maps"
+  Save: "&c/mapsaver save <nom_de_la_carte>&6 - Sauvegarde la carte en main"
+  Update: "&c/mapsaver update&6 - Met à jour une carte existante"
+  Import: "&c/mapsaver import <nom_de_la_carte>&6 - Importe la carte avec le nom spécifié"
+  List: "&c/mapsaver list &6 - Permet de lister tous les cartes"
 ErrorMessages:
   PermissionNotAllowed: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
   MapInHandNeeded: "&cVous devez avoir une carte rempli en main"
   MissingMapMeta: "&cImpossible de récupérer les MetaDonnées de votre carte"
-  MissingMapName: "&cLe nom de map est manquant"
-  MissingMapOrNotPublic: "&cCette map n'existe pas ou n'est pas publique"
-  MissingDataMap: "&cErreur inatendue, impossible de trouver les données de la map"
+  MissingMapRenderer: "&cImpossible de récupérer le Renderer de votre carte"
+  MissingMapName: "&cLe nom de carte est manquant"
+  MissingMapOrNotPublic: "&cCette carte n'existe pas ou n'est pas publique"
+  MissingDataMap: "&cErreur inattendue, impossible de trouver les données de la carte"
+  NotTheOwner: "&cVous n'êtes pas le propriétaire de cette carte"
+  NotTheOriginal: "&cCette carte n'est pas l'originale"
+  AlreadySaved: "&cVous avez déjà enregistré cette carte.\n&fUtilises &6/mapsaver update&f pour mettre à jour cette carte"
+InfoMessages:
+  CreatingNewMap: "Création d'une nouvelle carte"
+  UpdatingExistingMap: "Mise à jour d'une carte existante"
+  AssociationNewMap: "Association d'une nouvelle carte"
