Improve help command and autocomplete

--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -1,12 +1,12 @@
 Help:
-  Usage: "&6Utilisation :"
-  Help: "&c/mapsaver [help]&6 - Affiche l'aide"
-  Reload: "&c/mapsaver reload&6 - Permet de recharger le plugin"
-  Version: "&c/mapsaver version&6 - Affiche la version du plugin"
-  Save: "&c/mapsaver save <nom_de_la_carte>&6 - Sauvegarde la carte en main"
-  Update: "&c/mapsaver update&6 - Met à jour une carte existante"
-  Import: "&c/mapsaver import <nom_de_la_carte>&6 - Importe la carte avec le nom spécifié"
-  List: "&c/mapsaver list &6 - Permet de lister tous les cartes"
+  Usage: "&fUtilisation :"
+  Help: "&6/mapsaver [help]&f - Affiche l'aide"
+  Reload: "&6/mapsaver reload&f - Permet de recharger le plugin"
+  Version: "&6/mapsaver version&f - Affiche la version du plugin"
+  Save: "&6/mapsaver save <nom_carte>&f - Sauvegarde la carte en main"
+  Update: "&6/mapsaver update&f - Met à jour une carte existante"
+  Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
+  List: "&6/mapsaver list &f - Permet de lister tous les cartes"
 ErrorMessages:
   PermissionNotAllowed: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
