Add language mapping for visibility enum

--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -30,3 +30,6 @@ MapInfo:
   Visibility: "&6Visibilité : &f"
   OriginalMap: "&6Carte originale : &f"
   CopyMaps: "&6Copies verrouillées : &f"
+Visibility:
+  PUBLIC: "Publique"
+  PRIVATE: "Privée"
