--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -6,8 +6,8 @@ Help:
   Save: "&6/mapsaver save <nom_carte> [visibilité]&f - Sauvegarde la carte en main"
   Update: "&6/mapsaver update [visibilité]&f - Met à jour une carte existante"
   Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
-  List: "&6/mapsaver list &f - Permet de lister tous les cartes"
-  Info: "&6/mapsaver info [nom_carte] &f - Affiche les détails d'une map ou de celle en main"
+  List: "&6/mapsaver list [joueur] [page] &f - Permet de lister tous les cartes"
+  Info: "&6/mapsaver info [nom_carte] [joueur] &f - Affiche les détails d'une carte ou de celle en main"
 ErrorMessages:
   PermissionNotAllowed: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
@@ -21,10 +21,12 @@ ErrorMessages:
   NotTheOriginal: "&cCette carte n'est pas l'originale"
   AlreadySaved: "&cVous avez déjà enregistré cette carte.\n&fUtilises &6/mapsaver update&f pour mettre à jour cette carte"
   WrongVisibility: "&cMauvaise visibilité : %s. Attendue : %s"
+  PageNumberNotValid: "&cLe numéro de page n'est pas valide"
 InfoMessages:
   CreatingNewMap: "Création d'une nouvelle carte"
   UpdatingExistingMap: "Mise à jour d'une carte existante"
   AssociationNewMap: "Association d'une nouvelle carte"
+  PlayerNoSavedMap: "Ce joueur n'a pas de cartes sauvegardées"
 MapInfo:
   Name: "&6Nom : &f"
   Owner: "&6Propriétaire : &f"
@@ -35,6 +37,9 @@ List:
   ListMaps: "Liste des cartes :"
   InfoHover: "Afficher les détails de cette carte"
   ImportHover: "Importer cette carte"
+Pagination:
+  PreviousPageHover: "Page précédente"
+  NextPageHover: "Page suivante"
 Visibility:
   PUBLIC: "Publique"
   PRIVATE: "Privée"
