--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -4,7 +4,7 @@ Help:
   Reload: "&6/mapsaver reload&f - Permet de recharger le plugin"
   Version: "&6/mapsaver version&f - Affiche la version du plugin"
   Save: "&6/mapsaver save <nom_carte> [visibilité]&f - Sauvegarde la carte en main"
-  Update: "&6/mapsaver update [visibilité]&f - Met à jour une carte existante"
+  Update: "&6/mapsaver update&f - Met à jour une carte existante"
   Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
   List: "&6/mapsaver list [joueur] [page] &f - Permet de lister tous les cartes"
   Info: "&6/mapsaver info [nom_carte] [joueur] &f - Affiche les détails d'une carte ou de celle en main"
