--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -8,6 +8,7 @@ Help:
   Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
   List: "&6/mapsaver list [joueur] [page] &f - Permet de lister tous les cartes"
   Info: "&6/mapsaver info [nom_carte] [joueur] &f - Affiche les détails d'une carte ou de celle en main"
+  Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité> &f - Met à jour la visibilité d'une carte ou de celle en main"
 ErrorMessages:
   PermissionDenied: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
@@ -27,6 +28,7 @@ InfoMessages:
   NewMapAssociated: "Cette carte existante vous a été associée"
   MapImported: "La carte a été importée correctement"
   PlayerNoSavedMap: "Ce joueur n'a pas de cartes sauvegardées"
+  VisibilityMapUpdated: "La visibilité de votre carte a été mise à jour"
 MapInfo:
   Name: "Nom"
   Owner: "Propriétaire"
