--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -9,6 +9,8 @@ Help:
   List: "&6/mapsaver list [joueur] [page] &f - Permet de lister tous les cartes"
   Info: "&6/mapsaver info [nom_carte] [joueur] &f - Affiche les détails d'une carte ou de celle en main"
   Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité> &f - Met à jour la visibilité d'une carte ou de celle en main"
+  Lock: "&6/mapsaver lock [nom_carte] [joueur] &f - Verrouille une carte ou de celle en main"
+  Unlock: "&6/mapsaver unlock [nom_carte] [joueur] &f - Déverrouille une carte ou de celle en main"
 ErrorMessages:
   PermissionDenied: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
@@ -29,6 +31,8 @@ InfoMessages:
   MapImported: "La carte a été importée correctement"
   PlayerNoSavedMap: "Ce joueur n'a pas de cartes sauvegardées"
   VisibilityMapUpdated: "La visibilité de votre carte a été mise à jour"
+  LockedMapUpdated: "Votre carte a bien été verrouillée"
+  UnlockedMapUpdated: "Votre carte a bien été déverrouillée"
 MapInfo:
   Name: "Nom"
   Owner: "Propriétaire"
@@ -36,6 +40,7 @@ MapInfo:
   OriginalMap: "Carte originale"
   CopyMaps: "Copies verrouillées"
   Actions: "Actions"
+  Locked: "Verrouillée"
 List:
   ListMaps: "Liste des cartes de &6{player}&f :"
   InfoHover: "Afficher les détails de cette carte"
