--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -6,8 +6,8 @@ Help:
   Save: "&6/mapsaver save <nom_carte> [visibilité]&f - Sauvegarde la carte en main"
   Update: "&6/mapsaver update&f - Met à jour une carte existante"
   Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
-  List: "&6/mapsaver list [joueur] [page] &f - Permet de lister tous les cartes"
-  Info: "&6/mapsaver info [nom_carte] [joueur] &f - Affiche les détails d'une carte ou de celle en main"
+  List: "&6/mapsaver list [joueur] [page]&f - Permet de lister tous les cartes"
+  Info: "&6/mapsaver info [joueur] [nom_carte]&f - Affiche les détails d'une carte ou de celle en main"
   Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité> &f - Met à jour la visibilité d'une carte ou de celle en main"
   Lock: "&6/mapsaver lock [nom_carte] [joueur] &f - Verrouille une carte ou de celle en main"
   Unlock: "&6/mapsaver unlock [nom_carte] [joueur] &f - Déverrouille une carte ou de celle en main"
