Add tab completion for Import command

--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -5,7 +5,7 @@ Help:
   Version: "&6/mapsaver version&f - Affiche la version du plugin"
   Save: "&6/mapsaver save <nom_carte> [visibilité]&f - Sauvegarde la carte en main"
   Update: "&6/mapsaver update&f - Met à jour une carte existante"
-  Import: "&6/mapsaver import <nom_carte>&f - Importe la carte avec le nom spécifié"
+  Import: "&6/mapsaver import [joueur] <nom_carte>&f - Importe la carte avec le nom spécifié"
   List: "&6/mapsaver list [joueur] [page]&f - Permet de lister tous les cartes"
   Info: "&6/mapsaver info [joueur] [nom_carte]&f - Affiche les détails d'une carte ou de celle en main"
   Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité> &f - Met à jour la visibilité d'une carte ou de celle en main"
