--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -8,9 +8,9 @@ Help:
   Import: "&6/mapsaver import [joueur] <nom_carte>&f - Importe la carte avec le nom spécifié"
   List: "&6/mapsaver list [joueur] [page]&f - Permet de lister tous les cartes"
   Info: "&6/mapsaver info [joueur] [nom_carte]&f - Affiche les détails d'une carte ou de celle en main"
-  Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité> &f - Met à jour la visibilité d'une carte ou de celle en main"
-  Lock: "&6/mapsaver lock [nom_carte] [joueur] &f - Verrouille une carte ou de celle en main"
-  Unlock: "&6/mapsaver unlock [nom_carte] [joueur] &f - Déverrouille une carte ou de celle en main"
+  Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité>&f - Met à jour la visibilité d'une carte ou de celle en main"
+  Lock: "&6/mapsaver lock [joueur] [nom_carte]&f - Verrouille une carte ou de celle en main"
+  Unlock: "&6/mapsaver unlock [joueur] [nom_carte]&f - Déverrouille une carte ou de celle en main"
   Delete: "&6/mapsaver delete [nom_carte] [joueur] &f - Supprime une carte ou de celle en main"
 ErrorMessages:
   PermissionDenied: "&cVous n'êtes pas autorisé à faire cette action"
