--- a/src/main/resources/langs/fr_FR.yml
+++ b/src/main/resources/langs/fr_FR.yml
@@ -11,7 +11,7 @@ Help:
   Visibility: "&6/mapsaver visibility [nom_carte] [joueur] <visibilité>&f - Met à jour la visibilité d'une carte ou de celle en main"
   Lock: "&6/mapsaver lock [joueur] [nom_carte]&f - Verrouille une carte ou de celle en main"
   Unlock: "&6/mapsaver unlock [joueur] [nom_carte]&f - Déverrouille une carte ou de celle en main"
-  Delete: "&6/mapsaver delete [nom_carte] [joueur] &f - Supprime une carte ou de celle en main"
+  Delete: "&6/mapsaver delete [joueur] [nom_carte]&f - Supprime une carte ou de celle en main"
 ErrorMessages:
   PermissionDenied: "&cVous n'êtes pas autorisé à faire cette action"
   PlayerOnlyCommand: "&cSeul un joueur peut exécuter cette commande"
